versions/18.7.1/es_419/bridge.md
- Oxígeno en la sangre: `bridge:root=com.apple.OxygenSaturationSettings`
- Lavado de manos: `bridge:root=com.apple.BrookBridgeSettings`
- Lavado de manos → Permitir notificaciones: `bridge:root=com.apple.BrookBridgeSettings#ALLOW_NOTIFICATIONS_ID`
- Lavado de manos → Enviar al centro de notificaciones: `bridge:root=com.apple.BrookBridgeSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Lavado de manos → Notificaciones desactivadas: `bridge:root=com.apple.BrookBridgeSettings#NOTIFICATIONS_OFF_ID`
- Lavado de manos → Agrupar notificaciones: `bridge:root=com.apple.BrookBridgeSettings&path=NOTIFICATION_COALESCING_ID`
- Lavado de manos → Temporizador para lavarse: `bridge:root=com.apple.BrookBridgeSettings#HANDWASHING_TIMER_ID`
- Pantalla y brillo: `bridge:root=DISPLAY_AND_BRIGHTNESS`
- Pantalla y brillo → Duración de pantalla encendida: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration`
- Pantalla y brillo → Duración de pantalla encendida → AL TOCAR: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#ON_TAP_GROUP_ID`
- Pantalla y brillo → Duración de pantalla encendida → Encenderla 15 segundos: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#SHORT_WAKE_ID`
- Pantalla y brillo → Duración de pantalla encendida → Encenderla 70 segundos: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#LONG_WAKE_ID`
- Pantalla y brillo → Brillo: `bridge:root=DISPLAY_AND_BRIGHTNESS#BRIGHTNESS_LABEL`
- Pantalla y brillo → Siempre activa: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID`
- Pantalla y brillo → Siempre activa → Siempre activa: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_ID`
- Pantalla y brillo → Siempre activa → AL BAJAR MUÑECA: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_PRIVACY_GROUP_ID`
- Pantalla y brillo → Siempre activa → Mostrar notificaciones: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications`
- Pantalla y brillo → Siempre activa → Mostrar notificaciones → Mostrar notificaciones: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Pantalla y brillo → Siempre activa → Mostrar notificaciones → APPS PARA APPLE WATCH: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_GROUP_ID`
- Pantalla y brillo → Siempre activa → Mostrar apps: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps`
- Pantalla y brillo → Siempre activa → Mostrar apps → Mostrar apps: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Pantalla y brillo → Siempre activa → Mostrar apps → APPS: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_GROUP_ID`
- Pantalla y brillo → Tamaño del texto: `bridge:root=DISPLAY_AND_BRIGHTNESS#TEXT_SIZE`
- Pantalla y brillo → Negritas: `bridge:root=DISPLAY_AND_BRIGHTNESS#BOLD_TEXT`
- Pantalla y brillo → ACTIVAR PANTALLA: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE`
- Pantalla y brillo → Encender al levantar muñeca: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_WRIST_RAISE_SWITCH_ID`
- Pantalla y brillo → Encender al girar la corona: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_CROWN_UP_SWITCH_ID`
- Fotos: `bridge:root=com.apple.NanoPhotosBridgeSettings`
- Fotos → Sincronización de fotos: `bridge:root=com.apple.NanoPhotosBridgeSettings#Photo%20Syncing`
- Fotos → Recuerdos: `bridge:root=com.apple.NanoPhotosBridgeSettings#Memories`
- Fotos → Sincronizar recuerdos: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Memories`
- Fotos → Fotos destacadas: `bridge:root=com.apple.NanoPhotosBridgeSettings#Featured%20Photos`
- Fotos → Sincronizar fotos destacadas: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Featured%20Photos`
- Fotos → Álbum: `bridge:root=com.apple.NanoPhotosBridgeSettings#Album`
- Fotos → Sincronizar álbum: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Sync%20Album`
- Fotos → Límite de fotos: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Photos%20Limit`
- Fotos → Configuración de notificaciones: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Fotos → Duplicar mi iPhone: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_MY_COMPANION_ID`
- Fotos → Personalizado: `bridge:root=com.apple.NanoPhotosBridgeSettings#CUSTOM_ID`
- Complicaciones: `bridge:root=COMPLICATIONS`
- Visualización de apps: `bridge:root=APP_VIEW_ID`
- General: `bridge:root=GENERAL_LINK`
- General → Información: `bridge:root=GENERAL_LINK&path=ABOUT`
- General → Información → Nombre: `bridge:root=GENERAL_LINK&path=ABOUT/NAME_CELL_ID`
- General → Información → Garantía limitada: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION`
- General → Información → Garantía limitada → Garantía limitada: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Limited%20Warranty`
- General → Información → Garantía limitada → DETALLES DE LA COBERTURA: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#COVERAGE%20DETAILS`
- General → Información → Garantía limitada → Cobertura de hardware: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Hardware%20Coverage`
- General → Información → Garantía limitada → Soporte para teléfono y chat: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Chat%20&%20Phone%20Support`
- General → Información → Canciones: `bridge:root=GENERAL_LINK&path=ABOUT#SONGS_CELL_ID`
- General → Información → Fotos: `bridge:root=GENERAL_LINK&path=ABOUT#PHOTOS_CELL_ID`
- General → Información → Apps: `bridge:root=GENERAL_LINK&path=ABOUT#APPLICATIONS_CELL_ID`
- General → Información → Capacidad: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_CAPACITY_CELL_ID`
- General → Información → Disponible: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_AVAILABLE_CELL_ID`
- General → Información → Versión: `bridge:root=GENERAL_LINK&path=ABOUT#OS_VERSION_CELL_ID`
- General → Información → Operador: `bridge:root=GENERAL_LINK&path=ABOUT#CARRIER_CELL_ID`
- General → Información → Modelo: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_MODEL_CELL_ID`
- General → Información → Número de serie: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_SERIAL_NUMBER_CELL_ID`
- General → Información → Bluetooth: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_BLUETOOTH_ADDRESS_CELL_ID`
- General → Información → IMEI: `bridge:root=GENERAL_LINK&path=ABOUT#IMEI_CELL_ID`
- General → Información → ICCID: `bridge:root=GENERAL_LINK&path=ABOUT#ICCID_CELL_ID`
- General → Información → EID: `bridge:root=GENERAL_LINK&path=ABOUT/EID_CELL_ID`
- General → Información → SEID: `bridge:root=GENERAL_LINK&path=ABOUT/DEVICE_SEID_CELL_ID`
- General → Información → Aviso legal: `bridge:root=GENERAL_LINK&path=ABOUT/LEGAL`
- General → Información → Manual de uso del Apple Watch : `bridge:root=GENERAL_LINK&path=ABOUT#MANUAL`
- General → Actualización de software: `bridge:root=GENERAL_LINK&path=SOFTWARE_UPDATE_LINK`
- General → Instalación automática de apps: `bridge:root=GENERAL_LINK#AUTO_APP_INSTALL_SWITCH_ID`
- General → Modo de vuelo: `bridge:root=GENERAL_LINK&path=AIRPLANE_MODE_ID`
- General → Enfoque: `bridge:root=GENERAL_LINK&path=FOCUS_ID`
- General → Enfoque → Duplicar mi iPhone: `bridge:root=GENERAL_LINK&path=FOCUS_ID#Mirror%20my%20iPhone`
- General → Posición: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION`
- General → Posición → Posición del Apple Watch:: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#WRIST_CHOICE_ID`
- General → Posición → Muñeca izquierda: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LEFT_HAND_ID`
- General → Posición → Muñeca derecha: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#RIGHT_HAND_ID`
- General → Posición → Digital Crown a la izquierda: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_LEFT_ID`
- General → Posición → Digital Crown a la derecha: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_RIGHT_ID`
- General → Cuenta de Apple: `bridge:root=GENERAL_LINK&path=LINK_WITH_ICLOUD_LINK`
- General → Activar Dictado: `bridge:root=GENERAL_LINK#DICTATION_CELL_ID`
- General → Activar Handoff: `bridge:root=GENERAL_LINK#CONTINUITY`
- General → Modo de mesa de noche: `bridge:root=GENERAL_LINK#NIGHTSTAND_CELL_ID`
- General → Permitir capturas de pantalla: `bridge:root=GENERAL_LINK#BUTTON_CHORD_CELL_ID`
- General → Almacenamiento | En espera | Modo de ahorro | Tiempo transcurrido desde la última recarga: `bridge:root=GENERAL_LINK&path=USAGE_LINK`
- General → Registros de diagnóstico: `bridge:root=GENERAL_LINK&path=DIAGNOSTIC_LOG_BROWSER`
- General → Copiar análisis del Watch: `bridge:root=GENERAL_LINK#LOGS_CELL_ID`
- General → Restablecer: `bridge:root=GENERAL_LINK&path=RESET`
- General → Iniciar automáticamente al sumergirse: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH`
- General → Iniciar automáticamente al sumergirse → Iniciar autom. apps de audio: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH#AUTO_LAUNCH_MEDIA`
- General → REGRESAR AL RELOJ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK`
- General → REGRESAR AL RELOJ → REGRESAR AL RELOJ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#CSLPRFReturnToClockGroupID`
- General → REGRESAR AL RELOJ → Siempre: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_ALWAYS`
- General → REGRESAR AL RELOJ → Al pasar dos minutos: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_2_MINUTES`
- General → REGRESAR AL RELOJ → Al pasar una hora: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_1_HOUR`
- General → REGRESAR AL RELOJ → APPS: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#APP_GROUP_ID`
- General → Idioma y región: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION`
- General → Idioma y región → Duplicar mi iPhone: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#MIRROR_MY_COMPANION_ID`
- General → Idioma y región → Personalizado: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#CUSTOM_ID`
- General → Wake Screen: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN`
- General → Wake Screen → Ahora suena: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN#AUTO_LAUNCH_MEDIA`
- Pila inteligente: `bridge:root=SMARTSTACK_LINK`
- Sonidos y vibración: `bridge:root=SOUNDS_ID`
- Sonidos y vibración → Volumen de alerta: `bridge:root=SOUNDS_ID#AUDIO_SLIDER`
- Sonidos y vibración → Modo silencio: `bridge:root=SOUNDS_ID#audio_mute_switch`
- Sonidos y vibración → Audio de audífonos: `bridge:root=SOUNDS_ID#HEADPHONE_AUDIO_GROUP`
- Sonidos y vibración → Seguridad en audífonos: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING`
- Sonidos y vibración → Seguridad en audífonos → Notificaciones de audífonos: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneNotificationsSwitchKey`
- Sonidos y vibración → Seguridad en audífonos → Reducir sonidos fuertes: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneLevelLimitSwitchKey`
- Sonidos y vibración → Vibraciones: `bridge:root=SOUNDS_ID#Haptics`
- Sonidos y vibración → Vibración para avisos: `bridge:root=SOUNDS_ID#Haptic%20Alerts`
- Sonidos y vibración → Vibración de Digital Crown: `bridge:root=SOUNDS_ID#JACKRABBIT_ID`
- Sonidos y vibración → Vibración del sistema: `bridge:root=SOUNDS_ID#SYSTEM_HAPTICS_ID`
- Sonidos y vibración → Cubrir para silenciar: `bridge:root=SOUNDS_ID#COVER_TO_MUTE`
- Emergencia SOS: `bridge:root=SOS_MODE_ID`
- Privacidad: `bridge:root=PRIVACY_ID`
- Privacidad → Frecuencia cardiaca: `bridge:root=PRIVACY_ID#HEART_RATE_ENABLED_LABEL`
- Privacidad → Frecuencia respiratoria: `bridge:root=PRIVACY_ID#RESPIRATORY_RATE_LABEL`
- Privacidad → Monitor de condición: `bridge:root=PRIVACY_ID#FITNESS_TRACKING_ENABLED_LABEL`
- Privacidad → Restablecer datos de Fitness: `bridge:root=PRIVACY_ID#RESET_MOTION_CALIBRATION_LABEL`
- Privacidad → Medidas de ruido ambiental: `bridge:root=PRIVACY_ID#ENVIRONMENTAL_AUDIO_ENABLED_SWITCH_ID`
- Privacidad → Medidas de audio de audífono: `bridge:root=PRIVACY_ID&path=HeadphoneAudio`
- Privacidad → Medidas de audio de audífono → Guardar en Salud: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#SAVE_IN_HEALTH_GROUP`
- Privacidad → Medidas de audio de audífono → Durante ocho días: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#FOR_EIGHT_DAYS_CELL`
- Privacidad → Medidas de audio de audífono → Hasta que los elimine: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#UNTIL_I_DELETE_CELL`
- Privacidad → Mediciones de oxígeno en sangre: `bridge:root=PRIVACY_ID#OXYGEN_SATURATION_ENABLED_SWITCH_ID`
- Privacidad → Temperatura de la muñeca: `bridge:root=PRIVACY_ID#WRIST_TEMPERATURE_SWITCH_ID`
- Tiempo en pantalla: `bridge:root=SCREEN_TIME_ID`
- Nike Run Club: `bridge:root=VICTORY_ROW_ID`
- Reloj: `bridge:root=com.apple.NanoClockBridgeSettings`
- Reloj → Reloj de 24 horas: `bridge:root=com.apple.NanoClockBridgeSettings#24-Hour%20Time`
- Reloj → Carillón: `bridge:root=com.apple.NanoClockBridgeSettings#Chimes`
- Reloj → Sonidos: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds`
- Reloj → Sonidos → Campanas: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Bells`
- Reloj → Sonidos → Aves: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Birds`
- Reloj → Decir la hora: `bridge:root=com.apple.NanoClockBridgeSettings#Speak%20Time`
- Reloj → Controlar con modo Silencio: `bridge:root=com.apple.NanoClockBridgeSettings#Control%20With%20Silent%20Mode`
- Reloj → Voz siempre: `bridge:root=com.apple.NanoClockBridgeSettings#Always%20Speak`
- Reloj → Hora táctil: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time`
- Reloj → Hora táctil → Hora táctil: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Taptic%20Time`
- Reloj → Hora táctil → Dígitos: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Digits`
- Reloj → Hora táctil → Conciso: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Terse`
- Reloj → Hora táctil → Código Morse: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Morse%20Code`
- Reloj → Notificaciones del iPhone: `bridge:root=com.apple.NanoClockBridgeSettings#Push%20Alerts%20from%20iPhone`
- Reloj → Indicador de notificaciones: `bridge:root=com.apple.NanoClockBridgeSettings#Notifications%20Indicator`
- Reloj → Monograma: `bridge:root=com.apple.NanoClockBridgeSettings&path=MONOGRAM_ID`
- Reloj → Notificaciones de carátulas: `bridge:root=com.apple.NanoClockBridgeSettings#Watch%20Face%20Notifications`
- Reloj → Abreviaturas de ciudades: `bridge:root=com.apple.NanoClockBridgeSettings&path=City%20Abbreviations`
- Reloj → Fuentes de datos de la carátula Siri: `bridge:root=com.apple.NanoClockBridgeSettings&path=Siri%20Face%20Data%20Sources`
- Ruido: `bridge:root=com.apple.Noise.settings`
- Ruido → Medidas de ruido ambiental: `bridge:root=com.apple.Noise.settings#ENABLE_MEASUREMENTS_ID`
- Ruido → Notificaciones por ruido: `bridge:root=com.apple.Noise.settings#LOUD_NOTIFICATION_GROUP_ID`
- Ruido → Umbral de ruido: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID`
- Ruido → Umbral de ruido → No: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#OFF`
- Ruido → Umbral de ruido → 80 decibeles: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_80`
- Ruido → Umbral de ruido → 85 decibeles: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_85`
- Ruido → Umbral de ruido → 90 decibeles: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_90`
- Ruido → Umbral de ruido → 95 decibeles: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_95`
- Ruido → Umbral de ruido → 100 decibeles: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_100`
- Ruido → Agrupar notificaciones: `bridge:root=com.apple.Noise.settings&path=NOTIFICATION_COALESCING_ID`
- Calendario: `bridge:root=com.apple.NanoCalendarBridgeSettings`
- Calendario → NOTIFICACIONES: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Calendario → Duplicar mi iPhone: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_MY_COMPANION_ID`
- Calendario → Personalizar…: `bridge:root=com.apple.NanoCalendarBridgeSettings#CUSTOM_ID`
- Calendario → CALENDARIOS: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_RADIO_GROUP_ID`
- Calendario → Duplicar mi iPhone: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_MY_COMPANION_ID`
- Calendario → Personalizar…: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=CALENDARS_CUSTOM_ID`
- Calendario → Próximos eventos: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Upcoming%20Events`
- Calendario → Invitaciones: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitations`
- Calendario → Respuestas de invitados: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitee%20Responses`
- Calendario → Cambios en calendario: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Shared%20Calendar%20Alerts`
- Walkie-talkie: `bridge:root=com.apple.tincan.settings`
- Walkie-talkie → Permitir notificaciones: `bridge:root=com.apple.tincan.settings#ALLOW_NOTIFICATIONS_ID`
- Walkie-talkie → Enviar al centro de notificaciones: `bridge:root=com.apple.tincan.settings#SEND_TO_NOTIFICATION_CENTER_ID`
- Walkie-talkie → Notificaciones desactivadas: `bridge:root=com.apple.tincan.settings#NOTIFICATIONS_OFF_ID`
- Walkie-talkie → Agrupar notificaciones: `bridge:root=com.apple.tincan.settings&path=NOTIFICATION_COALESCING_ID`
- Walkie-talkie → Amigos: `bridge:root=com.apple.tincan.settings#Friends`
- Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID`
- Siri → Pedirle a Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASK_SIRI_GROUP_ID`
- Siri → Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#HEY_SIRI_SWITCH_ID`
- Siri → Levantar para hablar: `bridge:root=SIRI_WATCH_SETTINGS_ID#RAISE_TO_SPEAK_SWITCH_ID`
- Siri → Presiona la Digital Crown: `bridge:root=SIRI_WATCH_SETTINGS_ID#DIGITAL_CROWN_SWITCH_ID`
- Siri → Respuestas con voz: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID`
- Siri → Respuestas con voz → Siempre activa: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_ALWAYS_ON_ID`
- Siri → Respuestas con voz → Controlar con modo Silencio: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_CONTROL_WITH_SILENT_MODE_ID`
- Siri → Respuestas con voz → Sólo con audífonos: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_HEADPHONES_ONLY_ID`
- Siri → Volumen de la voz: `bridge:root=SIRI_WATCH_SETTINGS_ID#VOICE_VOLUME_GROUP_ID`
- Siri → Sugerencias de Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASSISTANT_SUGGESTIONS_GROUP_ID`
- Entrenamiento: `bridge:root=com.apple.SessionTrackerAppSettings`
- Entrenamiento → Mostrar medida de objetivo: `bridge:root=com.apple.SessionTrackerAppSettings#PRO_SETTING_ENABLED_LABEL`
- Entrenamiento → Visualización: `bridge:root=com.apple.SessionTrackerAppSettings&path=METRIC_VIEW_ID`
- Entrenamiento → Pausa automática: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID`
- Entrenamiento → Pausa automática → Pausa automática: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID#WorkoutAutoPauseSwitch`
- Entrenamiento → Recordar empezar: `bridge:root=com.apple.SessionTrackerAppSettings#AUTO_START_WORKOUT_NOTIFICATIONS_ENABLED_LABEL`
- Entrenamiento → Recordar finalizar: `bridge:root=com.apple.SessionTrackerAppSettings#END_REMINDERS_ENABLED_LABEL`
- Entrenamiento → Presiona para pausar: `bridge:root=com.apple.SessionTrackerAppSettings#CHORD_PRESS_PAUSE_WORKOUT_ENABLED_LABEL`
- Entrenamiento → Detectar equipo de gimnasio: `bridge:root=com.apple.SessionTrackerAppSettings#NFC_ENABLED_LABEL_ID`
- Entrenamiento → Ver ritmo/velocidad: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL`
- Entrenamiento → Ver ritmo/velocidad → Actual: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#CURRENT_PACE_ID`
- Entrenamiento → Ver ritmo/velocidad → Promedio: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#AVERAGE_PACE_ID`
- Entrenamiento → Playlist para entrenar: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID`
- Entrenamiento → Playlist para entrenar → Ninguno: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#NONE_AUTOSTART_ID`
- Entrenamiento → Playlist para entrenar → Playlists: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#MUSIC_PLAYLIST_GROUP_ID`
- Entrenamiento → Reproducir desde el principio: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_PLAY_FROM_BEGINNING_SETTING_ID`
- Entrenamiento → Aleatorio: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_SHUFFLE_SETTING_ID`
- Entrenamiento → Unidades de medición: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID`
- Entrenamiento → Unidades de medición → Calorías: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_CALORIES_ID`
- Entrenamiento → Unidades de medición → Kilocalorías: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOCALORIES_ID`
- Entrenamiento → Unidades de medición → Kilojoules: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOJOULES_ID`
- Entrenamiento → Unidades de medición → Yardas: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_YARDS_ID`
- Entrenamiento → Unidades de medición → Metros: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_METERS_ID`
- Entrenamiento → Unidades de medición → Millas: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_MILES_ID`
- Entrenamiento → Unidades de medición → Kilómetros: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_KILOMETERS_ID`
- Entrenamiento → Unidades de medición → Millas: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_MILES_ID`
- Entrenamiento → Unidades de medición → Kilómetros: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_KILOMETERS_ID`
- Entrenamiento → Respuestas con voz: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_VOICE_FEEDBACK_LABEL`
- Entrenamiento → Hora de caminar: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_FOOTER_ID`
- Entrenamiento → Agregar los entrenamientos nuevos al Apple Watch: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_LABEL_ID`
- Entrenamiento → Ahorrar batería: `bridge:root=com.apple.SessionTrackerAppSettings#LOW_POWER_MODE`
- Mensajes: `bridge:root=com.apple.MessagesBridgeSettings`
- Mensajes → Duplicar mi iPhone: `bridge:root=com.apple.MessagesBridgeSettings#MIRROR_MY_COMPANION_ID`
- Mensajes → Personalizado: `bridge:root=com.apple.MessagesBridgeSettings#CUSTOM_ID`
- Mensajes → Respuestas predeterminadas: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES`
- Mensajes → Respuestas predeterminadas → Respuestas predeterminadas: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Default%20Replies`
- Mensajes → Respuestas predeterminadas → Respuestas inteligentes: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Smart%20Replies`
- Mensajes → Respuestas predeterminadas → Agregar respuesta…: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Add%20reply%E2%80%A6`
- Mensajes → Repetir notificaciones: `bridge:root=com.apple.MessagesBridgeSettings&path=PLAY_ALERT_TONE`
- Mensajes → Mensajes de audio: `bridge:root=com.apple.MessagesBridgeSettings&path=AudioMessagesMode`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca: `bridge:root=PASSCODE_ID`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca → Activar código: `bridge:root=PASSCODE_ID#TOGGLE_PASSCODE_ID`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca → Cambiar código: `bridge:root=PASSCODE_ID#CHANGE_PASSCODE_ID`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca → Código simple: `bridge:root=PASSCODE_ID#SIMPLE_PASSCODE_SWITCH_ID`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca → Desbloqueo con iPhone: `bridge:root=PASSCODE_ID#AUTO_UNLOCK_SWITCH_ID`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca → Borrar datos: `bridge:root=PASSCODE_ID#ERASE_DATA_SWITCH_ID`
- Activar código | Borrar datos | Cambiar código | Código | Código simple | Desactivar código | Desbloqueo con iPhone | Detección de muñeca → Detección de muñeca: `bridge:root=PASSCODE_ID#WRIST_DETECTION_CELL_ID`
- Mail: `bridge:root=com.apple.NanoMailBridgeSettings`
- Mail → Duplicar mi iPhone: `bridge:root=com.apple.NanoMailBridgeSettings#MIRROR_MY_COMPANION_ID`
- Mail → Personalizado: `bridge:root=com.apple.NanoMailBridgeSettings#CUSTOM_ID`
- Mail → Configuración de correo: `bridge:root=com.apple.NanoMailBridgeSettings#Mail%20Settings`
- Mail → Cuentas: `bridge:root=com.apple.NanoMailBridgeSettings&path=Accounts`
- Mail → Incluir correo: `bridge:root=com.apple.NanoMailBridgeSettings&path=Include%20Mail`
- Mail → Vista previa: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview`
- Mail → Vista previa → Ninguno: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#0`
- Mail → Vista previa → 1 línea: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#1`
- Mail → Vista previa → 2 líneas: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#2`
- Mail → Respuestas predeterminadas: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies`
- Mail → Respuestas predeterminadas → Respuestas predeterminadas: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Default%20Replies`
- Mail → Respuestas predeterminadas → Agregar respuesta…: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Add%20reply%E2%80%A6`
- Mail → Firma: `bridge:root=com.apple.NanoMailBridgeSettings&path=Signature`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri: `bridge:root=com.apple.StocksBridgeSettings`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Las complicaciones muestran: `bridge:root=com.apple.StocksBridgeSettings#Clock%20Face%20Complication%20Shows`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Precio actual: `bridge:root=com.apple.StocksBridgeSettings#Current%20Price`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Cambio de puntos: `bridge:root=com.apple.StocksBridgeSettings#Points%20Change`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Porcentaje de cambio: `bridge:root=com.apple.StocksBridgeSettings#Percentage%20Change`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Capit. mercado: `bridge:root=com.apple.StocksBridgeSettings#Market%20Cap`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → La carátula de Siri muestra la cotización de: `bridge:root=com.apple.StocksBridgeSettings#Siri%20Face%20Shows%20Quote%20For`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Valor seleccionado: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock`
- Bolsa | Cambio de puntos | Capitalización de mercado | Porcentaje de cambio | Precio actual | Valor seleccionado para tarjeta de Siri → Valor seleccionado → Valor seleccionado: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock#Selected%20Stock`
- Actividad: `bridge:root=com.apple.HealthAppsSettings`
- Actividad → Avisos de progreso: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL`
- Actividad → Avisos de progreso → Ninguno: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#ZERO_HOURS_ID`
- Actividad → Avisos de progreso → Cada 2 horas: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#TWO_HOURS_ID`
- Actividad → Avisos de progreso → Cada 4 horas: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#FOUR_HOURS_ID`
- Actividad → Avisos de progreso → Cada 6 horas: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#SIX_HOURS_ID`
- Actividad → Avisos de progreso → Cada 8 horas: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#EIGHT_HOURS_ID`
- Actividad → Logros: `bridge:root=com.apple.HealthAppsSettings#ACHIEVEMENTS_ENABLED_LABEL`
- Actividad → Resumen semanal: `bridge:root=com.apple.HealthAppsSettings#WEEKLY_SUMMARY_ENABLED_LABEL`
- Actividad → Notificaciones diarias: `bridge:root=com.apple.HealthAppsSettings#DAILY_PROGRESS_ENABLED_LABEL`
- Actividad → Objetivos cumplidos: `bridge:root=com.apple.HealthAppsSettings#GOAL_COMPLETIONS_ENABLED_LABEL`
- Actividad → Retos especiales: `bridge:root=com.apple.HealthAppsSettings#REMOTE_ACHIEVEMENTS_ENABLED_LABEL`
- Actividad → Notificaciones al compartir: `bridge:root=com.apple.HealthAppsSettings#ACTIVITY_SHARING_NOTIFICATIONS_ENABLED`
- Clima: `bridge:root=com.apple.weatherbridgesettings`
- Clima → Ciudad predeterminada: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City`
- Clima → Ciudad predeterminada → Ciudad predeterminada: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Default%20City`
- Clima → Ciudad predeterminada → Ubicación actual: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Current%20Location`
- Contactos: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired`
- Contactos → Organización: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder`
- Contactos → Organización → Nombre, apellido: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#0`
- Contactos → Organización → Apellido, nombre: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#1`
- Contactos → Mostrar como: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder`
- Contactos → Mostrar como → Nombre, apellido: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#1`
- Contactos → Mostrar como → Apellido, nombre: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#2`
- Contactos → Nombre corto: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName`
- Contactos → Nombre corto → Nombre corto: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Short%20Name`
- Contactos → Nombre corto → Nombre e inicial del apellido: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20&%20Last%20Initial`
- Contactos → Nombre corto → Inicial del nombre y apellido: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Initial%20&%20Last%20Name`
- Contactos → Nombre corto → Sólo el nombre: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20Only`
- Contactos → Nombre corto → Sólo el apellido: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Last%20Name%20Only`
- Contactos → Nombre corto → Preferir apodos: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Prefer%20Nicknames`
- Accesibilidad: `bridge:root=ACCESSIBILITY`
- Accesibilidad → Visión: `bridge:root=ACCESSIBILITY#VISION`
- Accesibilidad → VoiceOver: `bridge:root=ACCESSIBILITY&path=VOICEOVER_TITLE`
- Accesibilidad → Maximizar: `bridge:root=ACCESSIBILITY&path=ZOOM_TITLE`
- Accesibilidad → Negritas: `bridge:root=ACCESSIBILITY#BoldTextEnabled`
- Accesibilidad → Etiquetas sí/no: `bridge:root=ACCESSIBILITY#OnOffLabelsEnabled`
- Accesibilidad → Escala de grises: `bridge:root=ACCESSIBILITY#GrayscaleDisplay`
- Accesibilidad → Reducir transparencia: `bridge:root=ACCESSIBILITY#REDUCE_TRANSPARENCY`
- Accesibilidad → Reducir movimiento: `bridge:root=ACCESSIBILITY&path=ReduceMotion`
- Accesibilidad → Carillón: `bridge:root=ACCESSIBILITY&path=TapticChimesCell`
- Accesibilidad → Carillón → Carillón: `bridge:root=ACCESSIBILITY&path=TapticChimesCell#Chimes`
- Accesibilidad → Carillón → Horario: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule`
- Accesibilidad → Carillón → Horario → Cada hora: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#Hourly`
- Accesibilidad → Carillón → Horario → 30 minutos: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#30%20minutes`
- Accesibilidad → Carillón → Horario → 15 minutos: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#15%20minutes`
- Accesibilidad → Carillón → Sonidos: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds`
- Accesibilidad → Carillón → Sonidos → Campanas: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Bells`
- Accesibilidad → Carillón → Sonidos → Aves: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Birds`
- Accesibilidad → Motricidad: `bridge:root=ACCESSIBILITY#MotorGroupCell`
- Accesibilidad → Vel. para presionar botón: `bridge:root=ACCESSIBILITY&path=SideButton`
- Accesibilidad → Vel. para presionar botón → Velocidad para presionar: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_SPEED_HEADER`
- Accesibilidad → Vel. para presionar botón → Predeterminadas: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_DEFAULT`
- Accesibilidad → Vel. para presionar botón → Lenta: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOW`
- Accesibilidad → Vel. para presionar botón → Muy lenta: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOWEST`
- Accesibilidad → Adaptaciones táctiles: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell`
- Accesibilidad → Adaptaciones táctiles → Adaptaciones táctiles: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#TOUCH_ACCOMMODATIONS_SWITCHER`
- Accesibilidad → Adaptaciones táctiles → Duración de presión: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDurationGroup`
- Accesibilidad → Adaptaciones táctiles → Duración de presión: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDuration`
- Accesibilidad → Adaptaciones táctiles → Ignorar repetición: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeatGroup`
- Accesibilidad → Adaptaciones táctiles → Ignorar repetición: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeat`
- Accesibilidad → Adaptaciones táctiles → Ayuda táctil: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#Tap%20Assistance`
- Accesibilidad → Adaptaciones táctiles → No: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#OFF`
- Accesibilidad → Adaptaciones táctiles → Usar la ubicación del toque inicial: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_TOUCH`
- Accesibilidad → Adaptaciones táctiles → Usar la ubicación del toque final: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_RELEASE`
- Accesibilidad → ACTIVIDAD EN SILLA DE RUEDAS: `bridge:root=ACCESSIBILITY#MOBILITY`
- Accesibilidad → Walkie-Talkie: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalkGroup`
- Accesibilidad → Tocar para hablar: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalk`
- Accesibilidad → Audición: `bridge:root=ACCESSIBILITY#HEARING`
- Accesibilidad → RTT: `bridge:root=ACCESSIBILITY&path=RTT`
- Accesibilidad → RTT → RTT: `bridge:root=ACCESSIBILITY&path=RTT#RTT_TITLE`
- Accesibilidad → RTT → Número de retransmisión: `bridge:root=ACCESSIBILITY&path=RTT/TTY_RELAY_LABEL`
- Accesibilidad → RTT → Enviar de inmediato: `bridge:root=ACCESSIBILITY&path=RTT#TTY_REALTIME_LABEL`
- Accesibilidad → RTT → Respuestas predeterminadas: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE`
- Accesibilidad → RTT → Respuestas predeterminadas → Respuestas predeterminadas: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Default%20Replies`
- Accesibilidad → RTT → Respuestas predeterminadas → Agregar respuesta…: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Add%20reply%E2%80%A6`
- Accesibilidad → Audio mono: `bridge:root=ACCESSIBILITY#MonoAudioEnabled`
- Accesibilidad → Balance estéreo (derecha/izquierda): `bridge:root=ACCESSIBILITY#LEFT_RIGHT_BALANCE_SPOKEN`
- Accesibilidad → Notificaciones de audífonos: `bridge:root=ACCESSIBILITY#HeadphoneNotificationsID`
- Accesibilidad → Dispositivos auditivos: `bridge:root=ACCESSIBILITY#HearingDevicesComplicationGroupID`
- Accesibilidad → Complicación: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID`
- Accesibilidad → Complicación → Volumen del micrófono: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Mic%20Volume`
- Accesibilidad → Complicación → Programa: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Program`
- Accesibilidad → Velocidad de hora táctil: `bridge:root=ACCESSIBILITY#TapticTimeSpeedAdjustmentGroup`
- Accesibilidad → Función rápida accesibilidad: `bridge:root=ACCESSIBILITY&path=AX_SHORTCUT`
- Avisos de vuelta | Mapas: `bridge:root=com.apple.NanoMapsBridgeSettings`
- Avisos de vuelta | Mapas → Avisos de vuelta: `bridge:root=com.apple.NanoMapsBridgeSettings#Turn%20Alerts`
- Avisos de vuelta | Mapas → En auto: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving`
- Avisos de vuelta | Mapas → Navegación con CarPlay: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving%20with%20CarPlay`
- Avisos de vuelta | Mapas → A pie: `bridge:root=com.apple.NanoMapsBridgeSettings#Walking`
- Avisos de vuelta | Mapas → Bicicleta: `bridge:root=com.apple.NanoMapsBridgeSettings#Cycling`
- Avisos de vuelta | Mapas → Mostrar la navegación: `bridge:root=com.apple.NanoMapsBridgeSettings#Show%20Navigation`
- Avisos de vuelta | Mapas → Transporte: `bridge:root=com.apple.NanoMapsBridgeSettings#Transit`
- Avisos de vuelta | Mapas → Datos de la versión:: `bridge:root=com.apple.NanoMapsBridgeSettings#Build%20Info%3A`
- Mail y Calendario: `bridge:root=com.apple.BridgeRemoteAccounts`
- Mail y Calendario → Cuentas: `bridge:root=com.apple.BridgeRemoteAccounts#Accounts`
- Mail y Calendario → Agregar cuenta de Google…: `bridge:root=com.apple.BridgeRemoteAccounts#ADD_GOOGLE_ACCOUNT`
- Mail y Calendario → Obtener: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch`
- Mail y Calendario → Obtener → No: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Off`
- Mail y Calendario → Obtener → Cada hora: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Hourly`
- Mail y Calendario → Obtener → 30 minutos: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#30%20min`
- Mail y Calendario → Obtener → 15 minutos: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#15%20min`
- Corazón: `bridge:root=com.apple.HeartRateSettings`
- Corazón → Corazón: `bridge:root=com.apple.HeartRateSettings#1`
- Corazón → Notificaciones de frecuencia cardiaca: `bridge:root=com.apple.HeartRateSettings#2`
- Corazón → Frecuencia cardiaca alta: `bridge:root=com.apple.HeartRateSettings#3`
- Corazón → Frecuencia cardiaca baja: `bridge:root=com.apple.HeartRateSettings#4`
- Corazón → Ritmo irregular: `bridge:root=com.apple.HeartRateSettings#5`
- Corazón → Ver los registrados en Salud: `bridge:root=com.apple.HeartRateSettings#6`
- Corazón → ECG: `bridge:root=com.apple.HeartRateSettings#7`
- App Store: `bridge:root=com.apple.BridgeAppStoreDaemonSettings`
- App Store → Descargas automáticas: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#automaticDownloadSpecifier`
- App Store → Actualización automática: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#Automatic%20Updates`
- Sueño: `bridge:root=com.apple.NanoBedtimeBridgeSettings`
- Sueño → Configurar Sueño en la app Salud: `bridge:root=com.apple.NanoBedtimeBridgeSettings#SET_UP_SLEEP_CELL_ID`
- Límite de almacenamiento | Música | Música sincronizada: `bridge:root=com.apple.NanoMusicBridgeSettings`
- Límite de almacenamiento | Música | Música sincronizada → PLAYLISTS Y ÁLBUMES: `bridge:root=com.apple.NanoMusicBridgeSettings#PLAYLISTS%20&%20ALBUMS`
- Límite de almacenamiento | Música | Música sincronizada → Agregar música…: `bridge:root=com.apple.NanoMusicBridgeSettings#Add%20Music%E2%80%A6`
- Wallet y Apple Pay: `bridge:root=com.apple.NanoPassbookBridgeSettings`
- Wallet y Apple Pay → Apple Cash: `bridge:root=com.apple.NanoPassbookBridgeSettings#Apple%C2%A0Cash`
- Wallet y Apple Pay → Agregar tarjeta: `bridge:root=com.apple.NanoPassbookBridgeSettings#Add%20Card`
- Wallet y Apple Pay → Notificaciones: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Wallet y Apple Pay → Duplicar mi iPhone: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_MY_COMPANION_ID`
- Wallet y Apple Pay → Personalizado: `bridge:root=com.apple.NanoPassbookBridgeSettings#CUSTOM_ID`
- Salud: `bridge:root=com.apple.BridgeHealthSettings`
- Buscar Mi Apple Watch: `bridge:root=ActiveWatch`
- Buscar Mi Apple Watch → Enlazar Apple Watch nuevo: `bridge:root=ActiveWatch&path=Pair%20New%20Watch`
- Atención Plena: `bridge:root=com.apple.MindSettings`
- Atención Plena → Permitir notificaciones: `bridge:root=com.apple.MindSettings#ALLOW_NOTIFICATIONS_ID`
- Atención Plena → Enviar al centro de notificaciones: `bridge:root=com.apple.MindSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Atención Plena → Notificaciones desactivadas: `bridge:root=com.apple.MindSettings#NOTIFICATIONS_OFF_ID`
- Atención Plena → Recordatorios de Atención Plena: `bridge:root=com.apple.MindSettings#MIND_GROUP_ID`
- Atención Plena → Principio del día: `bridge:root=com.apple.MindSettings#MIND_START_OF_DAY_REMINDER`
- Atención Plena → Final del día: `bridge:root=com.apple.MindSettings#MIND_END_OF_DAY_REMINDER`
- Atención Plena → Agregar recordatorio…: `bridge:root=com.apple.MindSettings#Add%20Reminder%E2%80%A6`
- Atención Plena → Resumen semanal: `bridge:root=com.apple.MindSettings#MIND_WEEKLY_SUMMARY_ID`
- Atención Plena → Silenciar hoy: `bridge:root=com.apple.MindSettings#MIND_MUTE_FOR_TODAY_ID`
- Atención Plena → Frecuencia: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID`
- Atención Plena → Frecuencia → 4 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_4`
- Atención Plena → Frecuencia → 5 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_5`
- Atención Plena → Frecuencia → 6 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_6`
- Atención Plena → Frecuencia → 7 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_7`
- Atención Plena → Frecuencia → 8 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_8`
- Atención Plena → Frecuencia → 9 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_9`
- Atención Plena → Frecuencia → 10 respiraciones por minuto: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_10`
- Atención Plena → Vibraciones: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID`
- Atención Plena → Vibraciones → Ninguna: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#NONE_ID`
- Atención Plena → Vibraciones → Mínima: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#MINIMAL_ID`
- Atención Plena → Vibraciones → Especial: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#PROMINENT_ID`
- Podcasts: `bridge:root=com.apple.private.PodcastsBridgeSettings`
- Teléfono: `bridge:root=com.apple.PhoneBridgeSettings`
- Teléfono → Llamadas: `bridge:root=com.apple.PhoneBridgeSettings#carrier_direct_calling_group_id`
- Teléfono → Tono: `bridge:root=com.apple.PhoneBridgeSettings#RINGTONE`
- Teléfono → Sonido: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_SOUND`
- Teléfono → Vibración: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_HAPTIC`
- Profundidad: `bridge:root=com.apple.DepthCompanionSettings`
- Botón de acción: `bridge:root=STING_TITLE`
- Configuración del operador: `bridge:root=CARRIER_SETTINGS`
- Red celular: `bridge:root=CELLULAR_ID`
- Dock: `bridge:root=DOCK`
- Dock → Orden del Dock: `bridge:root=DOCK#OrderingOptionGroup`
- Dock → Recientes: `bridge:root=DOCK#Recents`
- Dock → Favoritos: `bridge:root=DOCK#Favorites`
- Dock: `bridge:root=DOCK.0`
- Dock → Orden del Dock: `bridge:root=DOCK.0#OrderingOptionGroup`
- Dock → Recientes: `bridge:root=DOCK.0#Recents`
- Dock → Favoritos: `bridge:root=DOCK.0#Favorites`
- Audiolibros: `bridge:root=com.apple.NanoBooks.BridgeSettings`
- Audiolibros → Iniciar sesión: `bridge:root=com.apple.NanoBooks.BridgeSettings#Sign%20In`
- Límite de fotos | Álbum de fotos seleccionado: `bridge:root=com.apple.mobileslideshow`
- Notificar lectura: `bridge:root=com.apple.MessagesBridgeSettings%23READ_RECEIPTS`